1999-09-28  James Henstridge  <james@daa.com.au>

	* libglade.py: enable gnome functionality if it is available.

	* gtk.py (GtkEditable.__getattr__): added accessors to GtkEditable.

	* generate/gtkedit.defs (GtkEditable): added accessors for some
	fields of the GtkEditable.

	* gtkmodule.c: added _raise, lower and input_get_pointer methods to
	the GdkWindow wrapper.

	* gtk.py (GtkAspectFrame.__init__): fixed prototype for GtkAspectFrame

1999-08-25  Matt Wilson  <msw@redhat.com>

	* gtkmodule.c (_wrap_gdk_char_width): added wrapper for gdk_char_width
	* gtk.py (gdk_char_width): added wrapper for gdk_char_width

1999-08-09  James Henstridge  <james@daa.com.au>

	* pygtk.spec: updated spec file, and added subpackages pygtk-glarea
	and pygtk-libglade.  Also incremented version number.

1999-08-08  James Henstridge  <james@daa.com.au>

	* NEWS: updated news file.

	* configure.in: increased version number to 0.6.2.

	* gdkimlibmodule.c (_wrap_gdk_imlib_image_get_array): make sure that
	the image data is not freed while the returned array is in use, so
	that we don't get into an inconsistent state.

	* gtk.py: added gdkrgb functions to this file.

	* gtkmodule.c: added the gdkrgb functions for drawing rgb and greyscale
	images.
	(gdk_draw_array): a new function that will draw a numpy array to a
	drawable with gdkrgb.  It is written so that it can handle slicing
	on the first two axes -- it does not handle non contiguous data on
	the third axis.

1999-08-04  Matt Wilson  <msw@redhat.com>

	* GdkImlib.py (create_image_from_xpm): new wrapper for creating
	imlib images from xpm data
	
	* gdkimlibmodule.c (_wrap_gdk_imlib_create_image_from_xpm): New
	wrapper

1999-08-03  James Henstridge  <james@daa.com.au>

	* description.py (GdkWindow): added descriptions of the new routines.

	* gtkmodule.c (GdkWindow.property_{get,change,delete}): new functions
	for manipulating the properties on a window.
	
	* gtk.py (_window_foreign_new, _root_window): added wrappers for