@@ -2,7 +2,7 @@ AC_INIT
 
 dnl for gnome-python:
 
-AM_INIT_AUTOMAKE(pygtk, 0.6.2)
+AM_INIT_AUTOMAKE(pygtk, 0.6.3)
 
 AM_PATH_PYTHON
 AM_INIT_PYEXEC_MOD
