@@ -1,3 +1,11 @@
+pygtk-0.6.3:  30-September-1999
+	- if the new gnome-python is installed, the libglade module will load
+	  the gnome support.  Make sure you remember to import gnome.ui if the
+	  glade file contains any gnome widgets.
+	- New methods for GdkWindow objects -- lower, _raise (for stacking
+	  order manipulation) and input_get_pointer (for XInput stuff).
+	- A few other bugs have been fixed as well.  See ChangeLog for details.
+
 pygtk-0.6.2:  9-August-1999
 	- Threading should work correctly with multiple threads accessing
 	  GTK (assuming they use threads_enter/leave).  Thanks go to Matt
