@@ -1,3 +1,13 @@
+1999-09-30  James Henstridge  <james@daa.com.au>
+
+	* pygtk.spec: updated spec file.
+	
+	* NEWS: added news items
+	
+	* configure.in: updated version number.
+
+	* libglademodule.c: don't segfault when a widget name does not exist.
+
 1999-09-28  James Henstridge  <james@daa.com.au>
 
 	* libglade.py: enable gnome functionality if it is available.
